# ai-scribe-enterprise

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
api/: data_loader.py  main.py  models.py  proxy.py  quality_runner.py  sync.py
config/: deployment.py  deployment.yaml  engines.yaml  loader.py  paths.py  provider_manager.py  quality_baseline.yaml
data/: README.md
deploy/: Dockerfile.api  Dockerfile.pipeline  Dockerfile.provider  docker-compose.pipeline.yml  docker-compose.provider.yml  setup_pipeline_server.sh  setup_provider_server.ps1  setup_provider_server.sh
docs/: admin_guide.md  architecture.md  collaboration_guide.md  dual_server_guide.md  fhir_ehr_adapter.md  implementation.md  output_sync_enhancements.md  provider_server_deployment.md  provider_web_ui_enhancements.md  streaming_asr_guide.md  team_a_delivery_report.html  team_a_feature_setup_guide.html  team_responsibilities.md  ui_setup_guide.md
helpers/: extract_dictation.py  unzip_and_flatten.py
learning/: asr_improvement.py
mcp_servers/: registry.py
orchestrator/: __init__.py  graph.py  state.py
output/: __init__.py  asr_eval_general.json  asr_eval_general.md  batch_report_v1.md  batch_report_v2.md  batch_report_v3.md  batch_report_v4.md  batch_report_v5.md  batch_report_v6.md  batch_report_v6m.md  batch_report_v6q.md  batch_report_v6q14.md  batch_report_v7.md  batch_report_v7q14.md  batch_report_v7q32.md  batch_report_v8.md  comparison_writer.py  markdown_writer.py  quality_report_v2.md  quality_report_v3.md  quality_report_v4.md  (+8 more)
(+1353 files in other folders)
